# haskell-rules-and-mcp

./: .dockerignore  .ghci  .gitignore  .mcp.example.json  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROMPT_CONTINUACION.md  README.md  SECURITY.md  flake.nix  haskell-rules-and-mcp.cabal
.claude/rules/: haskell-automation.md  haskell-development.md  haskell-errors.md  haskell-mcp-first.md  haskell-monadic.md  haskell-project.md  use-haskell-flows-mcp.md
.docker/: Dockerfile.ci
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench-nightly.yml  build-ci-image.yml  ci.yml  codeql.yml  haskell-ci.yml  nix-flake.yml  (+2 more)
app/: Main.hs
bench/: bench-cold-start.py
docs/: BINARY_SIZE.md  CI_PERF.md  CONCURRENCY.md  GHC-API-rewrite-plan.md  PERFORMANCE.md  PUBLISH_ASSETS.md  TODO-parallel-e2e.md  TOOL_DESCRIPTION_TEMPLATE.md  TOOL_TAXONOMY.md  bench-cold-start.md  dogfood-2026-04-19-rle.md  dogfood-2026-04-19.md  dogfood-2026-05-01-comprehensive.md  flows.md  install.md  migration-from-ts.md  testing.md  ts-mcp-retrospective.md
mcp-server/: .npmrc  package-lock.json  package.json  test-protocol.md  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts
mcp-server-haskell/: README.md  cabal.project  fourmolu.yaml  haskell-flows-mcp.cabal
mcp-server-haskell/app/: Main.hs
mcp-server-haskell/benchmarks/: Main.hs
mcp-server-haskell/benchmarks/Reference/: reference-project.cabal
mcp-server-haskell/benchmarks/Reference/src/: Ref.hs
mcp-server-haskell/benchmarks/Reference/src/Ref/: Codec.hs  Core.hs  Filter.hs  Parse.hs  Stats.hs  Transform.hs  Types.hs  Util.hs  Validate.hs
mcp-server-haskell/benchmarks/Reference/test/: Spec.hs
mcp-server-haskell/spike/: GhcApiSpike.hs
mcp-server-haskell/spike-target/src/: Demo.hs
mcp-server-haskell/src/: HaskellFlows.hs
mcp-server-haskell/src/HaskellFlows/: Types.hs
mcp-server-haskell/src/HaskellFlows/Bench/: Budget.hs  Runner.hs
mcp-server-haskell/src/HaskellFlows/Data/: PropertyStore.hs
mcp-server-haskell/src/HaskellFlows/Ghc/: ApiSession.hs  CabalBootstrap.hs  Sanitize.hs
mcp-server-haskell/src/HaskellFlows/Ghci/: Sentinel.hs  Session.hs
mcp-server-haskell/src/HaskellFlows/Mcp/: Envelope.hs  ErrorKind.hs  Guidance.hs  Logging.hs  NextStep.hs  ParseError.hs  PathBootstrap.hs  PermissiveJSON.hs  Protocol.hs  ResourceUri.hs  Resources.hs  RpcMethod.hs  Schema.hs  SelfProject.hs  Server.hs  Staleness.hs  ToolName.hs  Transport.hs  WorkflowState.hs
mcp-server-haskell/src/HaskellFlows/Parser/: Coverage.hs  Error.hs  Hole.hs  ModuleName.hs  QuickCheck.hs  Type.hs  TypeSignature.hs
mcp-server-haskell/src/HaskellFlows/Refactor/: Extract.hs  Rename.hs
mcp-server-haskell/src/HaskellFlows/Suggest/: Rules.hs
mcp-server-haskell/src/HaskellFlows/Tool/: AddImport.hs  AddModules.hs  ApplyExports.hs  Arbitrary.hs  Batch.hs  Bootstrap.hs  Browse.hs  CheckModule.hs  CheckProject.hs  Complete.hs  Coverage.hs  CreateProject.hs  Deps.hs  DepsExplain.hs  Determinism.hs  Doc.hs  Eval.hs  ExplainError.hs  FixWarning.hs  Format.hs  Gate.hs  Goto.hs  Hole.hs  Hoogle.hs  Imports.hs  Info.hs  Lab.hs  Lint.hs  Load.hs  Modules.hs  Move.hs  Perf.hs  Project.hs  PropertyAudit.hs  PropertyLifecycle.hs  PropertyStore.hs  QuickCheck.hs  QuickCheckExport.hs  Refactor.hs  Regression.hs  (+10 more)
mcp-server-haskell/test/: PathTraversal.hs  Spec.hs
mcp-server-haskell/test-e2e/: Main.hs
mcp-server-haskell/test-e2e/E2E/: Assert.hs  Client.hs  Envelope.hs  Fixture.hs  Sharding.hs  Smoke.hs
mcp-server-haskell/test-e2e/Fixtures/Baseline/: baseline.cabal
mcp-server-haskell/test-e2e/Fixtures/Baseline/src/: Placeholder.hs
mcp-server-haskell/test-e2e/Scenarios/: ExprEvaluator.hs  ExprEvaluatorDogfoodSources.hs  ExprSources.hs  FlowANSIEscape.hs  FlowAddImportNoHoogle.hs  FlowArbitrary.hs  FlowBatch.hs  FlowBootstrap.hs  FlowBootstrapDocs.hs  FlowBrowseInteractive.hs  FlowCabalRecovery.hs  FlowCheckModuleProperties.hs  FlowConcurrentClients.hs  FlowCorpusTransport.hs  FlowCoverage.hs  FlowCreateProjectGreen.hs  FlowCreateProjectNameValidation.hs  FlowCrossClientStringification.hs  FlowCrossValidation.hs  FlowDependencyConflict.hs  FlowDepsExplain.hs  FlowDiskFull.hs  FlowDogfoodReplay.hs  FlowDogfoodUxFixes.hs  FlowEvalContextDedup.hs  FlowExplainError.hs  FlowExploratory.hs  FlowExprEvaluatorDogfood.hs  FlowFixWarning.hs  FlowFixWarningUnusedBinding.hs  FlowGateNoCrash.hs  FlowGatesProperties.hs  FlowGhciSigkill.hs  FlowGracefulMiss.hs  FlowHoleFitsBoundary.hs  FlowInfoClass.hs  FlowInfoConstructors.hs  FlowInjectionGuard.hs  FlowLabAudit.hs  FlowLoadHoleDiagnostics.hs  (+35 more)
mcp-server/src/__tests__/fixtures/hm-project/: cabal.project  hm-project.cabal
mcp-server/src/__tests__/fixtures/parser-project/: parser-project.cabal
mcp-server/src/__tests__/fixtures/test-project/: .ghci  test-project.cabal
mcp-server/src/__tests__/fixtures/test-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
mcp-server/src/__tests__/fixtures/test-project/src/: TestLib.hs
mcp-server/src/__tests__/fixtures/test-project/test/: Spec.hs
playground/dogfood-rle/: dogfood-rle.cabal
playground/dogfood-rle/src/: DogfoodRle.hs
playground/dogfood-rle/test/: Spec.hs
playground/expr-evaluator/: expr-evaluator.cabal
playground/expr-evaluator/src/Expr/: Eval.hs  Pretty.hs  Simplify.hs  Syntax.hs
playground/expr-evaluator/test/: Spec.hs
playground/hindley-milner/: hindley-milner.cabal
playground/hindley-milner/src/: Lib.hs
playground/hindley-milner/src/HM/: Env.hs  Infer.hs  Pretty.hs  Subst.hs  Syntax.hs  Types.hs  Unify.hs
playground/hindley-milner/src/Parser/: HM.hs
playground/hindley-milner/test/: Main.hs  Properties.hs
playground/parser-combinators/: parser-combinators.cabal
playground/parser-combinators/src/Parser/: Char.hs  Combinators.hs  Core.hs  Error.hs  Run.hs
scripts/: bench-mcp.sh  check-rules-freshness.sh  ci-local.sh  install-mcp.sh
(+274 files in other folders)
