cabal-version:      3.12
name:               haskell-rules-and-mcp
version:            0.1.0.0
synopsis:           Haskell rules and MCP experiments
license:            MIT
author:             Damian Rafael Lattenero
build-type:         Simple

library
  exposed-modules:
    Lib
    HM.Syntax
    HM.Subst
    HM.Unify
    HM.Infer
    HM.Pretty
    Parser.Core
    Parser.Combinators
    Parser.Char
    Parser.HM
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    array,
    mtl >= 2.3,
    QuickCheck >= 2.14
  hs-source-dirs:   src
  default-language:  GHC2024
  ghc-options:       -Wall

test-suite properties
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Properties
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    QuickCheck >= 2.14,
    haskell-rules-and-mcp
  hs-source-dirs:   test
  default-language:  GHC2024
  ghc-options:       -Wall

executable haskell-rules-and-mcp
  main-is:          Main.hs
  build-depends:
    base >= 4.21 && < 5,
    containers >= 0.7,
    array,
    haskell-rules-and-mcp
  hs-source-dirs:   app
  default-language:  GHC2024
  ghc-options:       -Wall
