cabal-version:      3.0
name:               haskell-flows-mcp
version:            0.1.0.0
synopsis:           MCP server for property-first Haskell development (Haskell rewrite)
description:
  Progressive Haskell rewrite of the TypeScript haskell-flows MCP server.
  .
  Phase 1 status: scaffolding + a single working tool (ghci_load) that
  spawns a persistent GHCi, loads a module, and returns parsed diagnostics.
  Subsequent phases will port the remaining ~30 tools.
  .
  Design invariants locked in at this phase:
  .
  * Path traversal impossible by construction (ModulePath smart constructor)
  * Regex engine is regex-tdfa (linear time, no ReDoS)
  * GHCi child process is never invoked via shell; argv-form only
  * Command serialization via STM (no silent races between concurrent tools)
license:            BSD-3-Clause
author:             Damián Rafael Lattenero
maintainer:         damian.lattenero@mercadolibre.com
build-type:         Simple
extra-source-files: README.md

common shared
    default-language:   GHC2024
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wmissing-home-modules -Wpartial-fields
                        -Wredundant-constraints -Wunused-packages
    default-extensions: OverloadedStrings
                        DerivingStrategies
                        DeriveGeneric
                        StrictData
                        LambdaCase

library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:  HaskellFlows
                      HaskellFlows.Types
                      HaskellFlows.Mcp.Protocol
                      HaskellFlows.Mcp.Transport
                      HaskellFlows.Mcp.Server
                      HaskellFlows.Ghci.Sentinel
                      HaskellFlows.Ghci.Session
                      HaskellFlows.Data.PropertyStore
                      HaskellFlows.Parser.Coverage
                      HaskellFlows.Parser.Error
                      HaskellFlows.Parser.Hole
                      HaskellFlows.Parser.QuickCheck
                      HaskellFlows.Parser.Type
                      HaskellFlows.Parser.TypeSignature
                      HaskellFlows.Refactor.Extract
                      HaskellFlows.Refactor.Rename
                      HaskellFlows.Suggest.Rules
                      HaskellFlows.Tool.Arbitrary
                      HaskellFlows.Tool.Batch
                      HaskellFlows.Tool.CheckModule
                      HaskellFlows.Tool.CheckProject
                      HaskellFlows.Tool.Complete
                      HaskellFlows.Tool.Coverage
                      HaskellFlows.Tool.CreateProject
                      HaskellFlows.Tool.Deps
                      HaskellFlows.Tool.Doc
                      HaskellFlows.Tool.Eval
                      HaskellFlows.Tool.Format
                      HaskellFlows.Tool.Goto
                      HaskellFlows.Tool.Hole
                      HaskellFlows.Tool.Hoogle
                      HaskellFlows.Tool.Info
                      HaskellFlows.Tool.Lint
                      HaskellFlows.Tool.Load
                      HaskellFlows.Tool.QuickCheck
                      HaskellFlows.Tool.Refactor
                      HaskellFlows.Tool.Regression
                      HaskellFlows.Tool.Suggest
                      HaskellFlows.Tool.ToolchainStatus
                      HaskellFlows.Tool.Type
                      HaskellFlows.Tool.ValidateCabal
                      HaskellFlows.Tool.Workflow
    build-depends:    base              >= 4.20 && < 5
                    , aeson             >= 2.2  && < 2.3
                    , async             >= 2.2  && < 2.3
                    , bytestring        >= 0.11 && < 0.13
                    , containers        >= 0.6  && < 0.9
                    , directory         >= 1.3  && < 1.4
                    , filepath          >= 1.4  && < 1.6
                    , process           >= 1.6  && < 1.7
                    , regex-tdfa        >= 1.3  && < 1.4
                    , stm               >= 2.5  && < 2.6
                    , text              >= 2.0  && < 2.2
                    , time              >= 1.12 && < 1.16

executable haskell-flows-mcp
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base              >= 4.20 && < 5
                    , haskell-flows-mcp

test-suite haskell-flows-mcp-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base              >= 4.20 && < 5
                    , haskell-flows-mcp
                    , text
                    , directory         >= 1.3  && < 1.4
                    , filepath          >= 1.4  && < 1.6
                    , time              >= 1.12 && < 1.16
                    , QuickCheck        >= 2.14
