cabal-version:      3.0
name:               haskell-flows-mcp
version:            0.1.0.0
synopsis:           MCP server for property-first Haskell development
description:
  Exposes 38 MCP tools over stdio JSON-RPC: compile + inspect + refactor +
  quickcheck + regression + pre-push gate. Every tool routes through a
  single in-process GHC API session (no subprocess REPL); cabal is invoked
  only once per target to capture stanza flags, which are then applied to
  the in-process compiler.
  .
  Design invariants enforced by construction:
  .
  * Path traversal impossible by construction (ModulePath smart constructor)
  * Regex engine is regex-tdfa (linear time, no ReDoS)
  * External subprocesses (cabal / hlint / formatter) are argv-form only —
    no shell interpolation
  * MVar-serialised writes to the HscEnv (GHC API is single-writer per session)
license:            BSD-3-Clause
author:             Damián Rafael Lattenero
maintainer:         damian.lattenero@mercadolibre.com
build-type:         Simple
extra-source-files: README.md

common shared
    default-language:   GHC2024
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates -Wincomplete-uni-patterns
                        -Wmissing-home-modules -Wpartial-fields
                        -Wredundant-constraints -Wunused-packages
    default-extensions: OverloadedStrings
                        DerivingStrategies
                        DeriveGeneric
                        StrictData
                        LambdaCase

library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:  HaskellFlows
                      HaskellFlows.Types
                      HaskellFlows.Mcp.ErrorKind
                      HaskellFlows.Mcp.Guidance
                      HaskellFlows.Mcp.NextStep
                      HaskellFlows.Mcp.ToolName
                      HaskellFlows.Mcp.PathBootstrap
                      HaskellFlows.Mcp.Protocol
                      HaskellFlows.Mcp.ResourceUri
                      HaskellFlows.Mcp.Resources
                      HaskellFlows.Mcp.RpcMethod
                      HaskellFlows.Mcp.Staleness
                      HaskellFlows.Mcp.WorkflowState
                      HaskellFlows.Mcp.Transport
                      HaskellFlows.Mcp.Server
                      HaskellFlows.Ghc.ApiSession
                      HaskellFlows.Ghc.CabalBootstrap
                      HaskellFlows.Ghc.Sanitize
                      HaskellFlows.Data.PropertyStore
                      HaskellFlows.Parser.Coverage
                      HaskellFlows.Parser.Error
                      HaskellFlows.Parser.Hole
                      HaskellFlows.Parser.ModuleName
                      HaskellFlows.Parser.QuickCheck
                      HaskellFlows.Parser.Type
                      HaskellFlows.Parser.TypeSignature
                      HaskellFlows.Refactor.Extract
                      HaskellFlows.Refactor.Rename
                      HaskellFlows.Suggest.Rules
                      HaskellFlows.Tool.AddImport
                      HaskellFlows.Tool.AddModules
                      HaskellFlows.Tool.ApplyExports
                      HaskellFlows.Tool.Arbitrary
                      HaskellFlows.Tool.Batch
                      HaskellFlows.Tool.Bootstrap
                      HaskellFlows.Tool.Browse
                      HaskellFlows.Tool.CheckModule
                      HaskellFlows.Tool.CheckProject
                      HaskellFlows.Tool.Complete
                      HaskellFlows.Tool.Coverage
                      HaskellFlows.Tool.CreateProject
                      HaskellFlows.Tool.Deps
                      HaskellFlows.Tool.Determinism
                      HaskellFlows.Tool.Doc
                      HaskellFlows.Tool.Eval
                      HaskellFlows.Tool.FixWarning
                      HaskellFlows.Tool.Format
                      HaskellFlows.Tool.Gate
                      HaskellFlows.Tool.Goto
                      HaskellFlows.Tool.Hole
                      HaskellFlows.Tool.Hoogle
                      HaskellFlows.Tool.Imports
                      HaskellFlows.Tool.Info
                      HaskellFlows.Tool.Lint
                      HaskellFlows.Tool.PropertyLifecycle
                      HaskellFlows.Tool.Load
                      HaskellFlows.Tool.QuickCheck
                      HaskellFlows.Tool.QuickCheckExport
                      HaskellFlows.Tool.Refactor
                      HaskellFlows.Tool.Regression
                      HaskellFlows.Tool.RemoveModules
                      HaskellFlows.Tool.Suggest
                      HaskellFlows.Tool.SwitchProject
                      HaskellFlows.Tool.ToolchainStatus
                      HaskellFlows.Tool.ToolchainWarmup
                      HaskellFlows.Tool.Type
                      HaskellFlows.Tool.ValidateCabal
                      HaskellFlows.Tool.Workflow
    build-depends:    base              >= 4.20 && < 5
                    , aeson             >= 2.2  && < 2.3
                    , bytestring        >= 0.11 && < 0.13
                    , containers        >= 0.6  && < 0.9
                    , directory         >= 1.3  && < 1.4
                    , filepath          >= 1.4  && < 1.6
                    , ghc               >= 9.10 && < 9.15
                    , ghc-paths         >= 0.1  && < 0.2
                    , process           >= 1.6  && < 1.7
                    , regex-tdfa        >= 1.3  && < 1.4
                    , text              >= 2.0  && < 2.2
                    , time              >= 1.12 && < 1.16

executable haskell-flows-mcp
    import:           shared
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base              >= 4.20 && < 5
                    , haskell-flows-mcp

-- --------------------------------------------------------------------------
--  Standalone smoke test that the GHC API boots in-process with our
--  toolchain (GHC 9.12.2) and can load + type-check a trivial module
--  without the rest of the library. Retained as a regression guard
--  against toolchain regressions that would silently break the main
--  library's session bootstrap before any unit test had a chance to
--  observe it.
-- --------------------------------------------------------------------------
executable spike-ghc-api
    import:           shared
    main-is:          GhcApiSpike.hs
    hs-source-dirs:   spike
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:    base              >= 4.20 && < 5
                    , ghc               >= 9.10 && < 9.15
                    , ghc-paths         >= 0.1  && < 0.2

test-suite haskell-flows-mcp-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base              >= 4.20 && < 5
                    , haskell-flows-mcp
                    , aeson             >= 2.2  && < 2.3
                    , bytestring        >= 0.11 && < 0.13
                    , containers        >= 0.6  && < 0.9
                    , text
                    , directory         >= 1.3  && < 1.4
                    , filepath          >= 1.4  && < 1.6
                    , ghc               >= 9.10 && < 9.15
                    , time              >= 1.12 && < 1.16
                    , vector            >= 0.13 && < 0.14
                    , QuickCheck        >= 2.14

-- --------------------------------------------------------------------------
--  End-to-end test-suite. One subprocess smoke-test covers the stdio
--  JSON-RPC transport against the real haskell-flows-mcp binary; the
--  remaining scenarios drive 'dispatchTool' in-process against a fresh
--  Server per scenario (same pattern as lsp-test for HLS). Pipe/flush
--  behaviour on macOS + GHC 9.12 is flaky for multi-round-trip
--  subprocess drivers, so we pay that cost exactly once.
--
--  NOT run by `cabal test` by default in most CI setups — invoke
--  explicitly via `cabal test haskell-flows-mcp-e2e`. Slow (30+s) and
--  depends on `exe:haskell-flows-mcp` being built.
-- --------------------------------------------------------------------------
test-suite haskell-flows-mcp-e2e
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test-e2e
    main-is:          Main.hs
    -- -threaded is MANDATORY for this suite: ghc_eval's inner budget
    -- uses 'System.Timeout.timeout', which registers its delay via
    -- 'registerDelay' on a TVar — a primitive that throws on the
    -- non-threaded RTS. Several scenarios (FlowTimeoutEnforcement,
    -- FlowSessionRobustness) rely on that budget firing. The executable
    -- target already ships with -threaded; the test-suite must too so
    -- the in-process 'dispatchTool' path can run eval.
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    other-modules:    E2E.Client
                      E2E.Assert
                      E2E.Smoke
                      Scenarios.ExprEvaluator
                      Scenarios.ExprEvaluatorDogfoodSources
                      Scenarios.ExprSources
                      Scenarios.FlowANSIEscape
                      Scenarios.FlowArbitrary
                      Scenarios.FlowBatch
                      Scenarios.FlowBootstrap
                      Scenarios.FlowConcurrentClients
                      Scenarios.FlowCorpusTransport
                      Scenarios.FlowCoverage
                      Scenarios.FlowCrossValidation
                      Scenarios.FlowDependencyConflict
                      Scenarios.FlowDiskFull
                      Scenarios.FlowExploratory
                      Scenarios.FlowExprEvaluatorDogfood
                      Scenarios.FlowDogfoodUxFixes
                      Scenarios.FlowFixWarning
                      Scenarios.FlowGracefulMiss
                      Scenarios.FlowInjectionGuard
                      Scenarios.FlowNonUTF8
                      Scenarios.FlowOversizedInput
                      Scenarios.FlowSandboxEscape
                      Scenarios.FlowTimeoutEnforcement
                      Scenarios.FlowModuleNameGuard
                      Scenarios.FlowMutation
                      Scenarios.FlowPropertyLifecycle
                      Scenarios.FlowPropertyStoreRace
                      Scenarios.FlowQualityGates
                      Scenarios.FlowRefactor
                      Scenarios.FlowRefactorAdversarial
                      Scenarios.FlowRefactorOutOfScope
                      Scenarios.FlowRegressionScopeFix
                      Scenarios.FlowSessionRobustness
                      Scenarios.FlowSwitchProject
                      Scenarios.FlowDogfoodReplay
                      Scenarios.FlowTypeBreakage
                      Scenarios.FlowScopeMgmt
                      Scenarios.FlowToolchain
                      Scenarios.FlowTypedHoles
                      Scenarios.FlowValidateCabal
                      Scenarios.FlowWorkflowHelp
    build-tool-depends: haskell-flows-mcp:haskell-flows-mcp
    build-depends:    base              >= 4.20 && < 5
                    , aeson             >= 2.2  && < 2.3
                    , async             >= 2.2  && < 2.3
                    , bytestring        >= 0.11 && < 0.13
                    , directory         >= 1.3  && < 1.4
                    , filepath          >= 1.4  && < 1.6
                    , haskell-flows-mcp
                    , process           >= 1.6  && < 1.7
                    , text
                    , time              >= 1.12 && < 1.16
                    , vector            >= 0.13 && < 0.14
