cabal-version:      3.0
name:               expr-evaluator
version:            0.1.0.0
synopsis:           (describe here)
license:            BSD-3-Clause
build-type:         Simple

common shared
    default-language:   GHC2024
    ghc-options:        -Wall -Wcompat -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
    default-extensions: OverloadedStrings
                        DerivingStrategies
                        LambdaCase

library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:  Expr.Syntax
                      Expr.Eval
                      Expr.Simplify
                      Expr.Pretty
    build-depends:    base >= 4.20 && < 5
                    , containers >= 0.6 && < 0.8

test-suite expr-evaluator-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base >= 4.20 && < 5
                    , expr-evaluator
                    , QuickCheck >= 2.14
                    , hspec >= 2.10

