cabal-version:      2.4
name:               hindley-milner
version:            0.1.0.0
synopsis:           Hindley-Milner type inference (Algorithm W)
license:            MIT

library
  exposed-modules:
    HM.Syntax
    HM.Types
    HM.Env
    HM.Unify
    HM.Infer
    HM.Pretty
  hs-source-dirs:   src
  build-depends:
    base        >= 4.14 && < 5,
    containers  >= 0.6,
    mtl         >= 2.2,
    QuickCheck  >= 2.14
  default-language: Haskell2010
  ghc-options:      -Wall
