cabal-version:      3.0
name:               parser-combinators
version:            0.1.0.0
synopsis:           A simple parser combinator library
license:            MIT
build-type:         Simple

library
  exposed-modules:
    Parser.Error
    Parser.Core
    Parser.Char
    Parser.Combinators
    Parser.Run
  build-depends:
    base >= 4.17 && < 5,
    QuickCheck >= 2.14
  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:       -Wall -Wcompat
