cabal-version:      2.4
name:               parser-combinators
version:            0.1.0.0
synopsis:           A parser combinator library from scratch
license:            MIT

library
  exposed-modules:
    Parser.Error
    Parser.Core
    Parser.Char
    Parser.Combinators
    Parser.Run
  build-depends:
    base >= 4.14 && < 5,
    QuickCheck >= 2.14
  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:       -Wall
