cabal-version:      2.4
name:               parser-project
version:            0.1.0.0
synopsis:           Parser combinator E2E test fixture

library
  exposed-modules:
    Parser.Error
    Parser.Core
    Parser.Char
    Parser.Run
  hs-source-dirs:   src
  build-depends:
    base >= 4.14 && < 5,
    QuickCheck >= 2.14
  default-language:  Haskell2010
  ghc-options:       -Wall
